--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Explore your fastify's instances",
   "main": "index.js",
   "scripts": {
-    "unit": "tap -J --cov test/**/*.test.js",
     "lint": "standard",
     "lint:fix": "standard --fix",
+    "test": "npm run test:unit",
+    "test:unit": "tap -J test/**/*.test.js",
     "local:mongo": "docker run -d -p 27017:27017 --rm --name demongo mongo:4",
-    "local:mongo:stop": "docker container stop demongo",
-    "test": "npm run lint && npm run unit"
+    "local:mongo:stop": "docker container stop demongo"
   },
   "repository": {
     "type": "git",
@@ -18,24 +18,26 @@
   "keywords": [
     "fastify-plugin",
     "onRegister",
-    "fastify"
+    "fastify",
+    "explorer",
+    "encapsulation"
   ],
   "author": "Manuel Spigolon <behemoth89@gmail.com> (https://github.com/Eomm)",
   "license": "MIT",
   "engines": {
-    "node": ">=6"
+    "node": ">=14"
   },
   "bugs": {
     "url": "https://github.com/Eomm/fastify-explorer/issues"
   },
   "homepage": "https://github.com/Eomm/fastify-explorer#readme",
   "dependencies": {
-    "fastify-plugin": "^1.6.0"
+    "fastify-plugin": "^4.0.0"
   },
   "devDependencies": {
-    "fastify": "^2.11.0",
-    "fastify-mongodb": "^2.0.0",
-    "standard": "^14.3.1",
-    "tap": "^12.7.0"
+    "@fastify/mongodb": "^6.0.1",
+    "fastify": "^4.2.1",
+    "standard": "^17.0.0",
+    "tap": "^16.3.0"
   }
 }
