--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint:fix": "standard --fix",
     "test": "npm run test:unit",
     "test:unit": "tap -J test/**/*.test.js",
-    "local:mongo": "docker run -d -p 27017:27017 --rm --name demongo mongo:4",
+    "local:mongo": "docker run -d -p 27017:27017 --rm --name demongo mongo:5",
     "local:mongo:stop": "docker container stop demongo"
   },
+  "files": [
+    "index.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Eomm/fastify-explorer.git"
@@ -35,7 +38,7 @@
     "fastify-plugin": "^4.0.0"
   },
   "devDependencies": {
-    "@fastify/mongodb": "^6.0.1",
+    "@fastify/mongodb": "^7.0.0",
     "fastify": "^4.2.1",
     "standard": "^17.0.0",
     "tap": "^16.3.0"
